@@ -37,6 +37,7 @@
   im_*mosaic1(), im_*merge1() redone as classes
 - better filename tracking for globalbalance
 - revised vips8 image load/save API, now simpler and more logical
+- operations emit "invalidate" if any of their input images invalidate
 
 6/3/14 started 7.38.6
 - grey ramp minimum was wrong
